# AI_Trading_Assitant

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  activate_venv.sh  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/agent/: __init__.py  chat_timing.py  runner.py  stream_sanitize.py
app/api/: __init__.py  auth.py  chat.py  coins.py  deps.py  health.py  jobs.py  notifications.py  portfolio.py
app/core/: auth_context.py  config.py
app/db/: __init__.py  models.py  session.py
app/jobs/: scheduler.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  coin_catalog.py  email.py  market_quotes.py  model_registry.py  news_fetcher.py  ollama_client.py  price_fetcher.py  rag_ingest.py  regional_market_context.py  whatsapp.py
app/tools/: __init__.py  memory.py  portfolio.py  quote.py  rag.py  symbol_normalize.py  web_search.py
deploy/: .env.example  README.md  README_AWS_TWO_INSTANCES.md  requirements.txt
deploy/config/: aws-backend.json  aws-ollama.example.json  aws-ollama.json  oci-ollama.example.json  oci-ollama.json
deploy/scripts/: aws_tasks.sh  provision_aws_backend.py  provision_aws_ollama.py  provision_oci_ollama.py  ssm_session.sh
deploy/templates/: aws-ollama-user-data.sh  aws-user-data.sh  dynu-ddns-update.sh  dynu-ddns.service  dynu-ddns.timer  oci-cloud-init.sh
docs/: AWS_ZERO_COST_DEPLOYMENT.md  COMPREHENSIVE_GUIDE.md  JS_TO_PYTHON_REFERENCE.md  MARKET_DATA_APIS.md  MODEL_PROVIDER_KEYS.md  SQLITE.md
