# Python’s equivalent to package.json: project metadata + dependencies
# See: https://peps.python.org/pep-0621/

[project]
name = "ai-trading-assistant-backend"
version = "1.0.0"
description = "FastAPI backend – Ollama, RAG, tools, streaming, scheduled jobs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sse-starlette==2.1.3",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "langchain==0.3.9",
    "langchain-ollama==0.2.0",
    "langchain-openai==0.2.10",
    "langchain-community==0.3.9",
    "langchain-text-splitters==0.3.2",
    "chromadb==0.5.23",
    "sentence-transformers==3.3.1",
    "httpx==0.28.1",
    "apscheduler==3.10.4",
    "aiosqlite==0.20.0",
    "sqlalchemy[asyncio]==2.0.36",
    "python-dotenv==1.0.1",
    "feedparser==6.0.11",
    "duckduckgo-search==6.3.5",
    "PyJWT==2.9.0",
    "Markdown==3.7",
    "bleach==6.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

# Install: pip install -e .
